# ImmerseAI

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  server.py  start.sh
agent/: agent.py
agent/.adk/: session.db
agent/agents/: __init__.py  curriculum_agent.py  logic_agent.py  profile_agent.py
agent/tools/: mongodb_tool.py  scasp_tool.py  youtube_tool.py
frontend/: .env  index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatPanel.css  ChatPanel.jsx  Onboarding.css  Onboarding.jsx  RoadmapPanel.css  RoadmapPanel.jsx
